<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">My Diet</string>
    <string name="alert_dialog_delete_meal_title">Delete Meal</string>
    <string name="dialog_negative_button_abort_text">Cancel</string>
    <string name="dialog_positive_button_yes_text">Yes</string>
    <string name="dialog_positive_button_save_text">Save</string>
    <string name="alert_dialog_delete_meal_question">Are you sure you want to delete this meal?</string>
    <string name="alert_dialog_delete_recipe_title">Delete Recipe</string>
    <string name="alert_dialog_delete_recipe_negative_button">Cancel</string>
    <string name="alert_dialog_delete_recipe_positive_button">Yes</string>
    <string name="alert_dialog_delete_recipe_question">Are you sure you want to delete this recipe?</string>
    <string name="empty_meal_name">CHOOSE RECIPE</string>
    <string name="meal_eated_button_restore">Restore</string>
    <string name="meal_eated_button_eated">Eaten</string>
    <string name="protein_carbs_fat_amount_formated_text">P: %dg, C: %dg, F: %dg</string>
    <string name="save_recipes_to_file_positive_message">Recipes saved successfully</string>
    <string name="save_recipes_to_file_negative_message">Save error</string>
    <string name="load_recipes_from_file_positive_message">Recipes loaded successfully</string>
    <string name="load_recipes_from_file_negative_message">Load error</string>
    <string name="diet_fragment_select_day_text">Select day</string>
    <string name="calories_formated_text">%d kcal</string>
    <string name="recipe_name_text">Recipe Name</string>
    <string name="dialog_choose_tag_title_text">Choose Categories</string>
    <string name="recipe_name_error_text">Enter a recipe name</string>
    <string name="dialog_new_ingredient_title_text">Add New Ingredient</string>
    <string name="dialog_add_ingredient_error_name_text">Enter ingredient name!</string>
    <string name="dialog_add_ingredient_error_amount_text">Enter ingredient amount!</string>
    <string name="dialog_add_instruction_step_title_text">Add Recipe Step</string>
    <string name="dialog_add_instruction_step_error_text">Description cannot be empty!</string>
    <string name="dialog_recipe_parameters_title_text">Enter Recipe Details</string>
    <string name="dialog_recipe_parameters_error_name_text">Recipe name cannot be empty!</string>
    <string name="dialog_add_new_tag_title_text">Add New Recipe Category</string>
    <string name="dialog_add_new_tag_error_name_text">Category name not provided!</string>
    <string name="dialog_add_new_tag_error_existing_text">The category already exists!</string>
    <string name="recipes_file_name_json">My_Recipes.json</string>
    <string name="shopping_list_not_exists_error_text">No shopping list</string>
    <string name="dialog_add_shopping_item_title_text">Add New Product</string>
    <string name="dialog_add_shopping_item_error_name_text">Enter product name!</string>
    <string name="dialog_add_shopping_item_error_amount_text">Enter quantity!</string>
    <string name="empty_recipe_name">Recipe Name</string>
    <string name="menu_bottom_navigation_bar_diet_item">Diet</string>
    <string name="menu_bottom_navigation_bar_shopping_list_item">Shopping List</string>
    <string name="menu_bottom_navigation_bar_recipes_item">Recipes</string>
    <string name="menu_remove_item">Remove</string>
    <string name="menu_edit_item">Edit</string>
    <string name="menu_shopping_list_check_all">Select All</string>
    <string name="menu_shopping_list_remove_checked">Remove Selected</string>
    <string name="menu_top_app_bar_settings_item">Settings</string>
    <string name="menu_top_app_bar_logout_item">Logout</string>
    <string name="dialog_new_ingredient_name_hint_text">Name</string>
    <string name="dialog_new_ingredient_amount_hint_text">Amount</string>
    <string name="dialog_new_instruction_step_hint_text">Recipe Step</string>
    <string name="dialog_new_recipe_param_name_hint_text">Recipe Name</string>
    <string name="dialog_new_recipe_param_protein_hint_text">Protein</string>
    <string name="dialog_new_recipe_param_carbs_hint_text">Carbohydrates</string>
    <string name="dialog_new_recipe_param_fat_hint_text">Fats</string>
    <string name="dialog_new_recipe_param_calories_hint_text">Calories</string>
    <string name="kcal_text">kcal</string>
    <string name="gram_text">g</string>
    <string name="dialog_new_tag_name_hint_text">New Recipe Category</string>
    <string name="month_year_label_default_text">Feb 2021</string>
    <string name="frag_diet_date_plan_text">Daily Plan:</string>
    <string name="frag_diet_date_default_text">31.02.2025</string>
    <string name="frag_meal_presentation_recipe_name_text">Recipe Name</string>
    <string name="protein_carbs_fat_amount_default_text">P: 0g, C: 0g, F: 0g</string>
    <string name="calories_default_text">0 kcal</string>
    <string name="portion_label_text">Portions:</string>
    <string name="portion_default_value_text">1.0</string>
    <string name="ingredients_list_title_text">Ingredient List</string>
    <string name="instruction_steps_title_text">Recipe:</string>
    <string name="fragment_new_recipe_title_text">Add New Recipe</string>
    <string name="tags_list_title_text">Recipe Categories</string>
    <string name="search_recipe_hint_text">Search Recipe</string>
    <string name="recipes_list_title_text">Recipe List</string>
    <string name="choose_recipe_button_text">Choose</string>
    <string name="frag_settings_title_text">Settings:</string>
    <string name="fragment_settings_reciper_per_day_label_text">Meals per day:</string>
    <string name="fragment_settings_tags_label_text">Recipe Categories:</string>
    <string name="fragment_settings_add_tag_button_text">Add</string>
    <string name="fragment_settings_export_button_text">Export Recipes</string>
    <string name="fragment_settings_import_button_text">Import Recipes</string>
    <string name="frag_shopping_list_shopping_list_label_text">Shopping List:</string>
    <string name="frag_shopping_list_shopping_period_default_text">21.02 - 25.02</string>
    <string name="frag_shopping_list_generate_button_text">Generate</string>
    <string name="item_meal_eated_button_text">Eaten</string>
    <string name="item_meal_replace_button_text">Replace</string>
    <string name="item_meal_remove_button_text">Remove</string>
    <string name="shopping_list_new_list_dialog_title">New shopping list</string>
    <string name="alert_dialog_new_list_question">Delete unpurchased items?</string>
    <string name="dialog_negative_button_no_text">No</string>
    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="select_all">Select all</string>
    <string name="delete_selected">Delete selected</string>
    <string name="item_meal_skip_button_text" >Skip</string>
    <string-array name="recipe_units">
        <item>gram</item>
        <item>kilogram</item>
        <item>milliliter</item>
        <item>liter</item>
        <item>pieces</item>
        <item>pinch</item>
    </string-array>
    <string-array name="shopping_units">
        <item>pieces</item>
        <item>kilogram</item>
        <item>liter</item>
    </string-array>
    <string-array name="days_shortnames">
        <item>Mon</item>
        <item>Tue</item>
        <item>Wed</item>
        <item>Thu</item>
        <item>Fri</item>
        <item>Sat</item>
        <item>Sun</item>
    </string-array>
    <string name="skipped_meal_prefix">(Skipped)</string>
    <string name="today">Today</string>
</resources>