<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RecipeChooseFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground"
        android:orientation="vertical"
        android:paddingLeft="5dp"
        android:paddingTop="5dp"
        android:paddingRight="5dp"
        android:paddingBottom="5dp"
        android:layout_weight="1">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/fr_recipe_choose_il_search_recipe_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorBackground"
            app:endIconDrawable="@drawable/ic_search"
            app:endIconMode="custom"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/fr_recipe_choose_et_search_recipe_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorOnBackground"
                android:hint="@string/search_recipe_hint_text"
                android:textColorHint="@color/black"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/fr_recipe_choose_rv_search_recipe_tag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/background_white_rounded"
            android:padding="3dp"
            tools:itemCount="5"
            tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_tag"
            tools:orientation="horizontal"/>

        <TextView
            android:id="@+id/fr_recipe_choose_tv_recipe_choose_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text="@string/recipes_list_title_text"
            android:textColor="@color/colorOnBackground"
            android:textSize="20sp"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/fr_recipe_choose_rv_recipe_choose"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/background_white_rounded"
            android:scrollbars="vertical"
            tools:itemCount="5"
            tools:listitem="@layout/item_recipe" />

    </LinearLayout>

    <Button
        android:id="@+id/fr_recipe_choose_btn_recipe_choose_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/lightGreen"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:text="@string/choose_recipe_button_text" />

</LinearLayout>